syntax = "proto3";

package trueauth;

import "google/protobuf/timestamp.proto";
import "model_user.proto";

option go_package = "github.com/sirjager/trueauth/stubs";

message RefreshRequest {
  bool user = 1;
}

message RefreshResponse {
  bytes session_id = 1;
  string access_token = 2;
  google.protobuf.Timestamp access_token_expires_at = 4;
  User user = 5;
}
